gemini-clone-app/k8s/gemini-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gemini-deployment
  namespace: gemini
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gemini
  template:
    metadata:
      labels:
        app: gemini
    spec:
      nodeSelector:
        nodegroup: app
      containers:
      - name: gemini-clone
        image: mrsinghdocker/gemini-clone:10
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
