gemini-clone-app/k8s/gemini-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: gemini-svc
  namespace: gemini
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gemini
