gemini-clone-app/k8s/mongodb-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: gemini
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: gemini
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb-svc"
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      nodeSelector:
        nodegroup: app
      containers:
      - name: gemini-mongodb
        image: mongo:6.0
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: secretvault
          mountPath: /data/db
      volumes:
        - name: secretvault
          persistentVolumeClaim:
            claimName: mongodb-pvc
